# TruthGen

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  SPEC.md
.github/workflows/: ci.yml
include/: permuter.hpp  scanner.hpp  truthcalc.hpp  truthgenerator.hpp  vartable.hpp
src/: main.cpp  permuter.cpp  scanner.cpp  truthcalc.cpp  truthgenerator.cpp  vartable.cpp
tests/: CMakeLists.txt  permuter_test.cpp  scanner_test.cpp  truthcalc_test.cpp  vartable_test.cpp
